# rabi

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  api-config.yaml  buf.gen.gateway.yaml  buf.gen.yaml  buf.yaml  go.mod  go.sum  mkdocs.yml  phase1-build-plan.md  phase2-build-plan.md
.github/workflows/: bench.yml  chaos.yml  ci.yml  deploy.yml  docs.yml  hybrid.yml  images.yml  load.yml  nightly.yml  operator.yml  ops.yml  policy-guard.yml  release.yml  security.yml  upgrade.yml
adapters/aer/: Dockerfile  pyproject.toml
adapters/aer/config/: gpu-sim-cpu.yaml  gpu-sim.yaml  replay.yaml  single.yaml  three.yaml
adapters/aer/config/snapshots/: aer-alpha-static.json  aer-beta-static.json  aer-gamma-static.json  gpu-sim-static.json
adapters/aer/scripts/: extract_snapshots.py
adapters/aer/src/rabi_aer/: fleet.py  server.py  service.py  targets.py  tasks.py
adapters/aer/src/tangle/adapter/v1alpha1/: adapter_pb2.py  adapter_pb2.pyi  adapter_pb2_grpc.py
adapters/aer/src/tangle_aer/: __init__.py  fleet.py  noise.py  replay.py  server.py  service.py  targets.py  tasks.py
adapters/aer/tests/: test_engine.py  test_replay.py
adapters/ibm/: Dockerfile  pyproject.toml
adapters/ibm/scripts/: live_bell.py
adapters/ibm/src/rabi_ibm/: __init__.py  server.py  service.py
adapters/ibm/src/tangle_ibm/: server.py  service.py
adapters/ibm/tests/: test_ibm_service.py
adapters/iqm/: Dockerfile  pyproject.toml
adapters/iqm/src/rabi_iqm/: backends.py  server.py  service.py
adapters/iqm/tests/: test_iqm_service.py
adapters/qdmi/: pyproject.toml
adapters/qdmi/mock/: mock_device.c
adapters/qdmi/src/rabi_qdmi/: device.py  server.py  service.py
adapters/qdmi/tests/: test_qdmi_device.py
adapters/qrmi/: pyproject.toml
adapters/qrmi/src/rabi_qrmi/: backends.py  server.py  service.py
adapters/qrmi/tests/: test_qrmi_service.py
bench/: baseline.json  pyproject.toml  report_template.md
bench/circuits/: bv_04.qasm  bv_08.qasm  bv_12.qasm  bv_16.qasm  bv_20.qasm  dj_03.qasm  dj_06.qasm  dj_10.qasm  dj_14.qasm  ghz_02.qasm  ghz_04.qasm  ghz_08.qasm  ghz_12.qasm  ghz_16.qasm  ghz_20.qasm  grover_03.qasm  grover_05.qasm  grover_07.qasm  qpeexact_04.qasm  qpeexact_08.qasm  qpeexact_12.qasm  wstate_03.qasm  wstate_06.qasm  wstate_10.qasm  wstate_14.qasm  wstate_18.qasm
bench/data/snapshots/: README.md  fake_brisbane_20q.json  fake_sherbrooke_20q.json  fake_torino_20q.json
bench/results/: effects.csv  per_seed.csv  report.md  results.csv  summary.csv
bench/runner/: main.go
bench/scripts/: analyze.py  execute.py  gen_series.py  generate_circuits.py
cmd/qctl/: admin.go  jobs.go  login.go  main.go  targets.go  tenancy.go  usage.go
cmd/rabi/: login.go  main.go  targets.go  usage.go
cmd/rabi-bench-gate/: main.go
cmd/rabi-chaos/: main.go
cmd/rabi-conformance/: main.go
cmd/rabi-load/: main.go
cmd/rabi-shadow/: main.go
cmd/rabid/: auth.go  main.go
cmd/tangled/: main.go
conformance/: aer_test.go  conformance.go  report.go  selftest_test.go
deploy/airgap/: build-bundle.sh  install.sh
deploy/compose/: docker-compose.yml  seed.sh
deploy/fleet0/: cloud-init.yaml  compose.images.yml  provision.sh
deploy/observability/: grafana-dashboards.yml  grafana-datasource.yml  prometheus.yml
docs/: README.md  api-guide.md  architecture.md  backup-restore.md  concepts.md  conformance-authors.md  decisions.md  demo.cast  fleet.md  install.md  install.sh  ops-calendar.md  qctl-reference.md  qdmi-site-recipe.md  quantumjob-reference.md  quickstart.md  rabi-reference.md  runbooks.md  scheduling-policies.md  security-checklist.md  site-install-guide.md
docs/brand/: README.md
docs/fleet0/: upgrade.md
docs/receipts/: harvest-20260723.md
examples/: bell.yaml
examples/hybrid-workflow/: Dockerfile.runner  README.md  run.sh
hack/: airgap-verify.sh  backup-drill.sh  backup-restore-drill.sh  bench-determinism.sh  check-spdx.sh  conformance-report.sh  coverage-check.sh  demo-session.sh  e2e-console.mjs  e2e-console.sh  e2e-helm.sh  e2e-mixed-fleet.sh  e2e-operator.sh  e2e-probes.sh  mutation-test.sh  smoke-m0.sh  smoke-m1.sh  smoke-m2.sh  smoke-m7.sh
internal/accounting/: normalize.go  normalize_fuzz_test.go  normalize_test.go
internal/adaptertest/: fake.go
internal/api/: admin.go  atrest_test.go  auth.go  auth_test.go  authmatrix_test.go  component_test.go  dex_e2e_test.go  jobs.go  logsecrets_test.go  metrics.go  scope_test.go  server.go  services.go  status_handler.go  tenancy_api_test.go
internal/auth/: auth.go  auth_test.go  matrix.go  oidc.go  token.go
internal/benchgate/: gate.go  gate_test.go
internal/chaos/: chaos_test.go  invariants.go  invariants_selftest_test.go
internal/console/: console.go
internal/dispatch/: conflict.go  conflict_test.go  decode_fuzz_test.go  dispatcher.go  dispatcher_shadow_test.go  dispatcher_test.go  fairshare.go  fairshare_test.go  metrics.go  sessions.go  sessions_test.go
internal/ha/: leader.go  leader_test.go
internal/job/: phase.go  phase_test.go  v02_fields_test.go  validate.go  validate_fuzz_test.go  validate_internal_test.go  validate_test.go
internal/loadtest/: harness.go  loadtest_test.go  soak.go  soak_test.go  stats.go  stats_test.go  storm.go  storm_test.go
internal/probe/: probe.go
internal/registry/: registry.go  registry_test.go
internal/scheduler/: absorbed.go  absorbed_test.go  aggregate_test.go  conflict.go  conformance_test.go  esp.go  esp_test.go  filter.go  filter_test.go  golden_test.go  policies.go  policies_test.go  props_test.go  qasm.go  qasm_fuzz_test.go  qasm_test.go  scheduler.go  views.go
internal/shadow/: report.go  report_test.go
internal/specdata/: specdata.go  specdata_test.go
internal/status/: gather_test.go  render_test.go  status.go  template.go
internal/store/: accounting.go  accounting_test.go  auth.go  auth_test.go  jobs.go  (+14 more)
operator/: go.mod  go.sum  main.go
packaging/: qctl.rb.tmpl  rabi.rb.tmpl  render-formula.sh
spec/: CONTRIBUTING.md  GOVERNANCE.md  README.md  mvp-build-plan.md  test-and-verification-plan.md
(+108 files in other folders)
