# SPDX-License-Identifier: Apache-2.0
[project]
name = "rabi-adapter-aer"
version = "0.1.0"
description = "Rabi adapter: Tangle AdapterService over Qiskit Aer with calibration replay"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "grpcio>=1.62",
    "protobuf>=5.26",
    "grpcio-status>=1.62",
    "googleapis-common-protos>=1.63",
    "qiskit>=1.1",
    "qiskit-aer>=0.14",
    "qiskit-qasm3-import>=0.5",
    "pyyaml>=6.0",
]

[project.scripts]
rabi-adapter-aer = "rabi_aer.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "grpcio-tools>=1.62",
    "ruff>=0.4",
    "qiskit-ibm-runtime>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rabi_aer", "src/tangle"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
extend-exclude = ["src/tangle"]  # generated code

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
