# SPDX-License-Identifier: Apache-2.0
[project]
name = "rabi-adapter-ibm"
version = "0.1.0"
description = "Rabi adapter: Tangle AdapterService over IBM Quantum cloud backends (qiskit-ibm-runtime)"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "rabi-adapter-aer",     # protocol stubs + Snapshot/Metric plumbing
    "qiskit-ibm-runtime>=0.30",
]

[project.scripts]
rabi-adapter-ibm = "rabi_ibm.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv.sources]
rabi-adapter-aer = { path = "../aer", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rabi_ibm"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
