# SPDX-License-Identifier: Apache-2.0
[project]
name = "rabi-adapter-iqm"
version = "0.1.0"
description = "Rabi adapter: Tangle AdapterService over IQM Resonance (second EU cloud, M10)"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "rabi-adapter-qrmi",    # shared adapter chassis
]

[project.scripts]
rabi-adapter-iqm = "rabi_iqm.server:main"

[project.optional-dependencies]
# Live IQM Resonance needs the qiskit-iqm SDK, installed in the SERVING
# environment (its qiskit pin conflicts with the fleet's qiskit 2.x lock;
# the import is lazy, so cassette mode and CI never need it — D-044):
#   uv pip install qiskit-iqm
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv.sources]
rabi-adapter-qrmi = { path = "../qrmi", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rabi_iqm"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
