# SPDX-License-Identifier: Apache-2.0
[project]
name = "rabi-adapter-qdmi"
version = "0.1.0"
description = "Rabi adapter: Tangle AdapterService over a QDMI device library (C ABI via ctypes)"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "rabi-adapter-qrmi",    # shared adapter chassis
]

[project.scripts]
rabi-adapter-qdmi = "rabi_qdmi.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv.sources]
rabi-adapter-qrmi = { path = "../qrmi", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rabi_qdmi"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
