# SPDX-License-Identifier: Apache-2.0
[project]
name = "rabi-adapter-qrmi"
version = "0.1.0"
description = "Rabi adapter: Tangle AdapterService over QRMI-managed quantum resources"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "rabi-adapter-aer",     # protocol stubs + qiskit (QASM validation)
    "python-dotenv>=1.0",   # QRMI's own credential convention
]

[project.scripts]
rabi-adapter-qrmi = "rabi_qrmi.server:main"

[project.optional-dependencies]
# The live QRMI bindings are optional: cassette mode (CI) needs none of it.
qrmi = ["qrmi>=0.20"]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.uv.sources]
rabi-adapter-aer = { path = "../aer", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rabi_qrmi"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
